--- a/main/templates/header.html
+++ b/main/templates/header.html
@@ -11,7 +11,7 @@
                     <a class="nav-link active " aria-current="page" href="/article/">轉型專欄</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" href="/toApp/doc.html/">推動事項</a>
+                        <a class="nav-link active " aria-current="page" href="/doc/">推動事項</a>
                     </li>
                 <li class="nav-item">
                     {% comment %} <a class="nav-link active " aria-current="page" href="/toApp/video.html/">video專區</a> {% endcomment %}
