--- a/main/templates/header.html
+++ b/main/templates/header.html
@@ -7,14 +7,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav example03">
                 <li class="nav-item ">
-                    {% comment %} <a class="nav-link active " aria-current="page" href="/toApp/article/">轉型專欄</a> {% endcomment %}
                     <a class="nav-link active " aria-current="page" href="/article/">轉型專欄</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" href="/doc/">推動事項</a>
+                        <a class="nav-link active " aria-current="page" href="/feature/">推動事項</a>
                     </li>
                 <li class="nav-item">
-                    {% comment %} <a class="nav-link active " aria-current="page" href="/toApp/video.html/">video專區</a> {% endcomment %}
                     <a class="nav-link active " aria-current="page" href="/video/">video專區</a>
                 </li>
                 <li class="nav-item">
