Feature: upload content

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -207,7 +207,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row doc-container" id="doc-container">
 
                 <div class="col-lg-3 col-md-3">
-                    <a class="last-doc-item-link" href="#">
+                    <a class="last-doc-item-link" href="/sa/">
                         <div class="last-doc-item">
                             <div class="wrap">
                                 <div class="title">Super Agent</div>
