Video: add is_index column

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -181,7 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row align-items-center" id="MOVIE">
                 <div class="col-sm-12 text-center">
                     <!---------------------主打影片編輯雙引號裡面開始---------------------------->
-                    <video class="ToMovie" src="{% static 'videos/index.mp4' %}" controls></video>
+                    <video class="ToMovie" src="{% static index_video.filepath %}" controls></video>
                     <!---------------------主打影片結束---------------------------->
                     <div class="playpause"></div>
                     <a class="btn-more" href="/video/">更多影片</a>
