--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -26,7 +26,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="信義房屋數位賦能 轉動美好新生活">
     <title>轉型辦公室網站</title>
-    <link rel="shortcut icon" type="image/jpg" href="{% static 'images/webicon.svg' %}" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/webicon.png' %}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
