--- a/sa_page/templates/sa_index.html
+++ b/sa_page/templates/sa_index.html
@@ -72,7 +72,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <nav class="main">
                 <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
                 <a href="{% static 'videos/sa_p_v1.mp4' %}" class="nav-link" data-trigger-page-transition><span class="text">新功能查看</span> <span class="line"></span></a>
-
+                <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">數據總覽</span> <span class="line"></span></a>
             </nav>
 
 
