--- a/sa_page/templates/sa_index.html
+++ b/sa_page/templates/sa_index.html
@@ -75,20 +75,22 @@
 
 <body class=" home-page">
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML8B9HB" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-<header>
-    <div class="background" data-toggle-menu></div>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML8B9HB"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <header>
+        <div class="background" data-toggle-menu></div>
 
-    <div class="nav-container">
-        <div class="top">
-            <a href="/sa/" class="logo"></a>
+        <div class="nav-container">
+            <div class="top">
+                <a href="/sa/" class="logo"></a>
 
-            <nav class="main">
-                <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
-                <a href="{% static 'videos/sa_p_v1.mp4' %}" class="nav-link" data-trigger-page-transition><span class="text">新功能查看</span> <span class="line"></span></a>
-                <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">數據總覽</span> <span class="line"></span></a>
-            </nav>
+                <nav class="main">
+                    <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
+                    <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">數據總覽</span> <span class="line"></span></a>
+                    <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">點讚GO!</span> <span class="line"></span></a>
+                </nav>
+
 
                 <a href="/sa/#" class="hidden-button" data-toggle-trial></a>
             </div>
