--- a/sa_page/templates/pd_data.html
+++ b/sa_page/templates/pd_data.html
@@ -1,7 +1,7 @@
 {% load static%}
 <!doctype html>
 <html lang="zh">
-    
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -25,11 +25,11 @@
     <meta name="msapplication-TileColor" content="#ffffff">
 
     <link rel="stylesheet" href="{% static 'assets/css/pd_data.css' %}">
-    
+
 
     <meta name="theme-color" content="#ffffff">
 
-    				
+
 	<title>信義房屋 - Super Agent 打造您的職能守護神</title>
 	<meta name="description" content="Sinyi - Super Agent 打造您的職能守護神" />
 
@@ -37,14 +37,14 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="SuperAgent是承載數據與科技的數位平台，信義夥伴透過次世代智能協作，人人都是超級業務" />
 	<meta property="og:image" content="assets/img/logo-small.png" />
-	
+
 	<meta property="og:image:width" content="1200" />
 	<meta property="og:image:height" content="600" />
 	<meta property="og:description" content="打造您的職能守護神、數位賦能 服務全能、一鍵生成 工作即報表、數據整合 秒懂客戶" />
 	<meta property="og:site_name" content="Super Agent" />
-	
 
-	
+
+
 	<link rel="home" href="index.html" />
 	<link rel="canonical" href="index.html">
     <link rel="stylesheet" href="{% static 'assets/css/sa.css' %}">
@@ -53,7 +53,7 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'assets/css/commons.css' %}">
-   
+
 
     <div id="top"></div>
     <!-- Google Tag Manager -->
@@ -63,7 +63,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-ML8B9HB');</script>
     <!-- End Google Tag Manager -->
-           
+
 </head>
 
 <body class="thumbsupgo">
@@ -80,12 +80,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <nav class="main">
                 <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
-                <a href="{% static 'videos/sa_p_v1.mp4' %}" class="nav-link" data-trigger-page-transition><span class="text">新功能查看</span> <span class="line"></span></a>
                 <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">數據總覽</span> <span class="line"></span></a>
-				<!-- <a href="voting.html" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">待解鎖服務</span> <span class="line"></span></a> -->
+                <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">點讚GO!</span> <span class="line"></span></a>
             </nav>
 
-            
+
             <a href="/sa/#" class="hidden-button" data-toggle-trial></a>
         </div>
 
@@ -95,18 +94,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="form-container tabs-container">
                 <div class="tabs">
                     <a href="/sa/#" class="heading tab active" data-open-tab="trialForm">聯絡我們</a>
-                    
+
                 </div>
 
-                                                
+
                 <div class="tab-content-container">
                                             <div class="tab-content active" data-tab="trialForm">
                             <p>同仁有任何想法，歡迎與SuperAgent團隊聯絡</p>
-												<p>E-Mail: 
+												<p>E-Mail:
 													<a href="mailto:SuperAgent@sinyi.com.tw?subject=主旨&body=內容">SuperAgent@sinyi.com.tw</a></p>
-                         
+
                         </div>
-                                          
+
                                     </div>
             </div>
         </div>
@@ -141,7 +140,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </li>
                 <li><a href="">數位名片</a></li>
                 <li><a href="">社區百科</a></li>
-                <li><a href="">信義足跡</a></li> 
+                <li><a href="">信義足跡</a></li>
             </ul>
         </nav>
     </section>
@@ -229,8 +228,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script src="{% static 'js/interface.js' %}"></script>
 
 
-<script src="https://d3js.org/d3.v6.min.js"></script>    
-    
+<script src="https://d3js.org/d3.v6.min.js"></script>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js"></script>
 
@@ -246,7 +245,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     $(document).ready(function(){
         $('.bxslider').bxSlider({
-            speed: 600,      
+            speed: 600,
             mode: 'horizontal',
             infiniteLoop: true,
             easing: 'ease-in-out',
@@ -258,7 +257,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             preventDefaultSwipeY: true
         });
 
-    }); 
+    });
 </script>
 <!-- <script src="{% static 'assets/js/pd_data.js' %}"></script> -->
 <script>
@@ -286,7 +285,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 var arry2 = arry1[1].split("&");
                 var type_name=arry2[0].split("=")[1];
                 var type_level=arry2[1].split("=")[1];
-                
+
                 $("#span1").html(type_name);
                 $("#span2").html(type_level);
 
@@ -297,7 +296,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             }
         }
 
-        const section2 = (overview) =>{  
+        const section2 = (overview) =>{
 
             $("#s2_span1").text(overview["regular_usage"][0]);
             $("#s2_span2").text(overview["regular_usage"][1]);
@@ -320,7 +319,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             .attr("class","pd_data_chart");
 
             // 匯入資料
-                
+
             var n_data = overview["twelve_week_avgusers"];
 
             // 製作比例尺
@@ -399,26 +398,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         const section3_1 = (bar_chart) => {
             let s3_1_data=bar_chart;
-    
+
             const svgSize={ width: 940,height: 338 };
             const margin = { top: 40, right: 100, bottom: 35, left: 70 };
             var width = svgSize.width - margin.left - margin.right;
             var height = svgSize.height - margin.top - margin.bottom;
-            
+
             var colors = ["#C2F1F4", "#79E0CF", "#2BB5C8"];
-            
+
             var svg = d3
                 .select("body")
                 .select("#section3 .d_chart")
-                .append("svg") 
+                .append("svg")
                 .attr("width", svgSize.width)
                 .attr("height", svgSize.height)
-            
+
             var chart = svg
                 .append("g")
                 .attr("transform",`translate(${margin.left},${margin.top})`)
                 .attr("class","pd_data_chart2");
-    
+
                 // 週
                 var weeksName = s3_1_data["stack"].map(d=>d.week);
                 // 常態使用人數總和
@@ -428,27 +427,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 counts.forEach((d,i)=>{
                     sum[i]=d.avg_usage_1_days+d.avg_usage_2_days+d.avg_usage_over_3_days;
                 })
-    
+
                 // 製作比例尺
                 var xScale = d3.scaleBand()
-                            .domain(weeksName) 
+                            .domain(weeksName)
                             .range([0, width])
                             .paddingInner(0.4)
                             .paddingOuter(0.35);
-    
+
                 var yScale = d3.scaleLinear()
                             .domain([0, d3.max(counts, d => d.avg_usage_1_days + d.avg_usage_2_days + d.avg_usage_over_3_days)+2])
                             .range([height, 0]);
                 var yScale2 = d3.scaleLinear()
                             .domain([0, 100])
                             .range([height, 0]);
-    
+
                 // 建立座標軸
                 var axisX = d3.axisBottom(xScale)
                             .tickPadding(10)
                 var axisY = d3.axisLeft(yScale)
                             .tickFormat(d => d+" 人")
-                
+
                 chart.append("g")
                     .call(axisX)
                     .attr("transform", `translate(0,${height})`);
@@ -463,7 +462,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     .attr("y", "-20px")
                     .attr("text-anchor", "end")
                     .text("常態使用人數");
-    
+
                 // 文字顯示
                 chart.append("g")
                     .attr("class","pd_data_chart2_text")
@@ -477,11 +476,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     .attr("font-size", "13px")
                     .style("fill", "#666666")
                     .text(d=>(d+" 人"))
-    
-    
+
+
                 // 進行分組
                 const stack = d3.stack().keys(["avg_usage_1_days", "avg_usage_2_days", "avg_usage_over_3_days"]);
-    
+
                 var groups = chart.selectAll(".stack")
                                 .data(stack(counts))
                                 .enter()
@@ -496,7 +495,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         .attr("y", d => yScale(d[1]))
                         .attr("width", xScale.bandwidth())
                         .attr("height", d => yScale(d[0]) - yScale(d[1]));
-    
+
                 // 畫折線圖
                 var line = d3.line()
                             .x(d => xScale(d.week))
@@ -520,20 +519,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     .attr("r", 5)
                     .style("fill", "#23989F")
                     .on("mouseover",(e,d)=>{
-    
+
                         d3.selectAll(".dot2").attr("r",5);
-    
+
                         d3.select(e.currentTarget)
                         .transition()
                         .duration(100)
                         .attr("r",11)
-    
+
                         d3.select("#tip1").style("visibility","visible")
                                         .style("top",yScale2(d.value.regular_percentage)-11+"px")
                                         .style("left",xScale(d.week)+"px")
                         d3.select("#tip_info1").text(d.value.avg_usage_over_3_days);
                         d3.select("#tip_info2").text(d.value.opened_sa_in_four_weeks);
-    
+
                     })
                     .on("mouseout",(e,d)=>{
                         d3.select(e.currentTarget)
@@ -555,19 +554,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             return d.value.regular_percentage+"%";
                         }
                     })
-        } 
+        }
 
         const section3_2 = (heatmap) => {
             const svgSize={ width: 940,height: 338 };
             const margin = { top: 40, right: 100, bottom: 35, left: 70 };
             var width = svgSize.width - margin.left - margin.right;
             var height = svgSize.height - margin.top - margin.bottom;
-        
+
             var colors = ["#FFFFFF", "#2AB3BC"];
             var svg = d3
                 .select("body")
                 .select("#section3 .d_chart")
-                .append("svg") 
+                .append("svg")
                 .attr("width", svgSize.width)
                 .attr("height", svgSize.height)
             var chart = svg
@@ -576,7 +575,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 .attr("class","pd_data_chart2");
             const hourArray = ["0","1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23",];
             const weekArray = ["星期日", "星期六", "星期五", "星期四", "星期三", "星期三", "星期二", "星期一"];
-            
+
             const xScale = d3.scaleBand()
                         .domain(hourArray)
                         .range([ 0, width ])
@@ -591,7 +590,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         .tickPadding(10)
             var axisY = d3.axisLeft(yScale)
                         .tickPadding(8)
-                        .tickSize(0);   
+                        .tickSize(0);
             chart.append("g")
                  .attr("transform", `translate(-1, ${height})`)
                  .call(axisX)
@@ -650,7 +649,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         // 切換圖表按鈕
         $("#chart_btn button").on("click",(e)=>{
             var src_string = $(".scale img").attr("src")
-        
+
             var index = src_string.indexOf("scale");
             var string1 = src_string.slice(0,index+5);
 
@@ -660,17 +659,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             if(btn_id == "chart_btn1"){
                 $("#chart_btn1").attr("class","chart_btn_s")
                 section3_1(context["bar_chart"]);
-                
+
                 $(".scale > img").attr("src",string1+'1'+'.svg');
             }else if(btn_id == "chart_btn2"){
                 $("#chart_btn2").attr("class","chart_btn_s")
                 section3_2(context["heatmap"]);
                 $(".scale > img").attr("src",string1+'2'+'.svg');
             }
-        })  
+        })
         // 二級選單 hover
         $(".d_nav_item").mouseover((e)=>{
-        
+
             if(!$(`#${e.target.id}`).hasClass('d_nav_s')){
                 $(`#${e.target.id}`).addClass("d_nav_h");
             }
