--- a/sa_page/templates/pd_data.html
+++ b/sa_page/templates/pd_data.html
@@ -339,7 +339,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             // 製作比例尺
             var xScale = d3.scaleBand()
-                        .domain(n_data.map(d => d.week))
+                        .domain(n_data.map(d => d.date))
                         .range([0, width]);
 
             var yScale = d3.scaleLinear()
@@ -374,7 +374,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             // 計算折線端點座標
             var line = d3.line()
-                        .x(d => xScale(d.week))
+                        .x(d => xScale(d.date))
                         .y(d => yScale(d.avg_usage_over_3_days));
 
             var gPath = chart.append("g")
@@ -393,7 +393,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 .enter()
                 .append("circle")
                 .attr("class", "dot")
-                .attr("cx", d => xScale(d.week))
+                .attr("cx", d => xScale(d.date))
                 .attr("cy", d => yScale(d.avg_usage_over_3_days))
                 .attr("r", 3.2)
                 .style("fill", "#23989F")
@@ -402,7 +402,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 .data(n_data)
                 .enter()
                 .append("text")
-                .attr("x", d => xScale(d.week))
+                .attr("x", d => xScale(d.date))
                 .attr("y", d => yScale(d.avg_usage_over_3_days)-10)
                 .attr("text-anchor", "middle")
                 .style("fill", "#23989F")
@@ -434,7 +434,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 .attr("class","pd_data_chart2");
 
                 // 週
-                var weeksName = s3_1_data["stack"].map(d=>d.week);
+                var weeksName = s3_1_data["stack"].map(d=>d.date);
                 // 常態使用人數總和
                 var counts = s3_1_data["stack"].map(d=>d.value);
                 // 總和陣列
@@ -607,7 +607,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             var chart = svg
                 .append("g")
                 .attr("transform",`translate(${margin.left},${margin.top})`)
-                .attr("class","pd_data_chart2");
+                .attr("id","heatmap");
             const hourArray = ["0","1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23",];
             const weekArray = ["星期日", "星期六", "星期五", "星期四", "星期三", "星期三", "星期二", "星期一"];
 
@@ -621,7 +621,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         .domain(weekArray)
                         .padding(0.01);
             var axisX = d3.axisBottom(xScale)
-                        // .tickSize(0)
                         .tickPadding(10)
             var axisY = d3.axisLeft(yScale)
                         .tickPadding(8)
@@ -636,9 +635,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                  .attr("id","chart3_y")
 
             const myColor = d3.scaleLinear()
-                // .range(["#EDFEFF", "#38A6AD"])
                 .range(["#C2F1F4", "#79E0CF","#2BB5C8"])
-                .domain([0,d3.max(heatmap,d=>d.users)])
+                .domain([0,d3.max(heatmap["data"],d=>d.users)])
             chart.append("text")
                 .attr("y", 285)
                 .attr("x", width+15)
@@ -648,9 +646,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 .attr("y", "-20px")
                 .attr("text-anchor", "end")
                 .text("星期");
+            chart.append("text")
+                .attr("x", "520px")
+                .attr("y", "-20px")
+                .attr("text-anchor", "end")
+                .attr("id","heatmap_title")
+                .attr("fill","#4AB490")
+                .attr("font-weight","bold")
+                .text(heatmap["period"]);
 
             chart.selectAll()
-                .data(heatmap, function(d) {
+                .data(heatmap["data"], function(d) {
                     return d.group+':'+d.variable;})
                 .join("rect")
                 .attr("x", function(d) { return xScale(d.hour) })
