Hide sa_usage page

--- a/sa_page/templates/sa_index.html
+++ b/sa_page/templates/sa_index.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <nav class="main">
                     <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
-                    <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">數據總覽</span> <span class="line"></span></a>
+                    <!-- <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">數據總覽</span> <span class="line"></span></a> -->
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">點讚GO!</span> <span class="line"></span></a>
                 </nav>
 
@@ -153,7 +153,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-                    <a href="/sa/pd_data/" class="btn-lead btn  button" target="_blank">數據總覽</a>
+                    <!-- <a href="/sa/pd_data/" class="btn-lead btn  button" target="_blank">數據總覽</a> -->
                     <a href="/sa/voting/" class="btn-lead btn  button" target="_blank">點讚GO!</a>
                 </div>
             </div>
@@ -818,7 +818,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="bottom">
                 <nav class="footer">
                     <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
-                    <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text">數據總覽</span> <span class="line"></span></a>
+                    <!-- <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text">數據總覽</span> <span class="line"></span></a> -->
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text">點贊Go!</span> <span class="line"></span></a>
                 </nav>
 
