--- a/sa_page/templates/pd_data.html
+++ b/sa_page/templates/pd_data.html
@@ -210,12 +210,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div>使用人數：<span id="tip2_info3">100</span> 人</div>
                         </div>
                         <div id="tip3" class="tip">
-                            <h3>當週使用人數</h3>
+                            <h3>平均週使用人數</h3>
                             <div>
                                 <div>
-                                    <div><span id="color3" class="plate"></span>當週使用3日以上：</div>
-                                    <div><span id="color2" class="plate"></span>當週使用2日：</div>
-                                    <div><span id="color1" class="plate"></span>當週使用1日：</div>
+                                    <div><span id="color3" class="plate"></span>平均週使用3日以上：</div>
+                                    <div><span id="color2" class="plate"></span>平均週使用2日：</div>
+                                    <div><span id="color1" class="plate"></span>平均週使用1日：</div>
                                 </div>
                                 <div>
                                     <div><span id="tip3_info3">8</span> 人</div>
