--- a/sa_page/templates/voting.html
+++ b/sa_page/templates/voting.html
@@ -94,7 +94,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <nav class="main">
                     <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
-                    <!-- <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">數據總覽</span> <span class="line"></span></a> -->
+                    <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">功能介紹</span> <span class="line"></span></a>
+                    <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">數據總覽</span> <span class="line"></span></a>
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">點讚GO!</span> <span class="line"></span></a>
                 </nav>
 
@@ -146,14 +147,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="nav-container">
             <div class="top">
                 <a href="/sa/" class="logo black"></a>
-
-                <!-- <nav class="main">
-                <a href="index.html" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
-
-               <a href="pd_data.html" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">數據總覽</span> <span class="line"></span></a>
-				<a href="＃" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">點贊Go!</span> <span class="line"></span></a>
-            </nav> -->
-
 
                 <a href="/sa/#" class="hidden-button" data-toggle-trial></a>
                 <h2>點讚GO!</h2>
@@ -320,7 +313,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <nav class="footer">
 
                         <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
-                        <!-- <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text">數據總覽</span> <span class="line"></span></a> -->
+                        <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">功能介紹</span> <span class="line"></span></a>
+                        <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text">數據總覽</span> <span class="line"></span></a>
                         <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text">點讚GO!</span> <span class="line"></span></a>
 
                     </nav>
