--- a/main/templates/article.html
+++ b/main/templates/article.html
@@ -26,7 +26,7 @@
                     </div>
                 </div> {% endcomment %}
                 <div class="col-lg main-photo">
-                    <img src="{{ latest_article.article_image.url }}">
+                    <img src="{{ latest_article.index_image.url }}">
                 </div>
                 <div class="col-lg main-des">
                     <div>
