hidden console log info

--- a/sa_page/templates/pd_data.html
+++ b/sa_page/templates/pd_data.html
@@ -297,7 +297,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             ]
         // 匯入資料
         const context = JSON.parse('{{context|safe}}');
-        console.log(context);
+        // console.log(context);
 
         const initial =()=>{
             var url=decodeURI(window.location.href);
